--- a/pharmaccess.bib
+++ b/pharmaccess.bib
@@ -630,6 +630,18 @@
   file = {/Users/dkapitan/Zotero/storage/QWVNBL94/instant-v2.html}
 }
 
+@misc{islam2023fhir,
+  title = {Fhir.Resources: {{FHIR Resources}} as {{Model Class}}},
+  shorttitle = {Fhir.Resources},
+  author = {Islam, Md Nazrul},
+  year = {2023},
+  month = dec,
+  urldate = {2023-01-22},
+  copyright = {BSD License},
+  keywords = {fhir,health IT,healthcare,hl7,python,resources},
+  file = {/Users/dkapitan/Zotero/storage/9QZ6AMBZ/fhir.resources.html}
+}
+
 @article{izudi2023experiences,
   title = {Experiences of Mothers and Health Workers with {{MomCare}} and {{SafeCare}} Bundles in {{Kenya}} and {{Tanzania}}: {{A}} Qualitative Evaluation},
   shorttitle = {Experiences of Mothers and Health Workers with {{MomCare}} and {{SafeCare}} Bundles in {{Kenya}} and {{Tanzania}}},
