--- a/index.qmd
+++ b/index.qmd
@@ -86,13 +86,13 @@ A commonly used perspective to scrutinize digital health is to consider it as a 
 
 Case studies on digital platforms in healthcare point to an emerging pattern where the focus shifts from the digital platform with its defining software and hardware components, to the data as the primary object of interest in and of itself [@ozalp2022digital;@alaimo2022organizations]. This observation ties into the proposed research agenda by de Reuver et al. to consider data platforms as a phenomenon distinct from digital platforms [@dereuver2022openness]. Generally, data platforms inherit the characteristics of digital platforms. For example, the economic perspective on digital platforms stresses their multi-sidedness with developers and consumers, while data platforms are used by data owners, data consumers and third party solution providers. At the same time, data platforms differ as their main offerings revolve around data. From a market perspective, data platforms have more moderate network effects and are more susceptible to fragmentation and heterogeneity.
 
-Particularly relevant in the context of health data platforms (HDPs), is the conceptualization of openness. The shift in perspective from digital platforms to data platforms coincides with the paradox of open [@keller2021paradox]. Originally, openness of digital platforms focused on open source, open standards and copyrights, which by has been superseded by “... conflicts about privacy, economic value extraction, the emergence of artificial intelligence, and the destabilizing effects of dominant platforms on (democratic) societies. Instead of access to information, the control of personal data has emerged in the age of platforms as the critical contention.” [@keller2021paradox]. These conflicts are particularly salient in the healthcare domain, as is evidenced by polemic surrounding data spaces [@otto2022designing] and data solidarity [@kickbusch2021lancet;@prainsack2022data;@prainsack2023beyond]. Openness is particularly relevant if we are to realize a solidarity-based approach to health data sharing that i) gives people a greater control over their data as active decision makers; ii) ensures that the value of data is harnessed for public good; and iii) moves society towards equity and justice by counteracting dynamics of data extraction [@prainsack2022data].  
+Particularly relevant in the context of health data platforms (HDPs), is the conceptualization of openness. The shift in perspective from digital platforms to data platforms coincides with the paradox of open [@keller2021paradox]. Originally, openness of digital platforms focused on open source, open standards and copyrights, which by has been superseded by “... conflicts about privacy, economic value extraction, the emergence of artificial intelligence, and the destabilizing effects of dominant platforms on (democratic) societies. Instead of access to information, the control of personal data has emerged in the age of platforms as the critical contention.” [@keller2021paradox]. These conflicts are particularly salient in the healthcare domain, as is evidenced by the polemic surrounding data spaces [@otto2022designing] and data solidarity [@kickbusch2021lancet;@prainsack2022data;@prainsack2023beyond]. Openness is particularly relevant if we are to realize a solidarity-based approach to health data sharing that i) gives people a greater control over their data as active decision makers; ii) ensures that the value of data is harnessed for public good; and iii) moves society towards equity and justice by counteracting dynamics of data extraction [@prainsack2022data].  
 
 ### From health information exchanges to health data platforms
 
 This paper is motivated by the conflation of a number of developments relevant to the design and implementation of open, solidarity-based HDPs in LMICs. First, the OpenHIE framework [@openhie] has been adopted by many sub-Saharan African countries [@mamuye2022health] as the architectural blueprint for implementing nation-wide health information exchanges (HIE), including Nigeria [@dalhatu2023paper], Kenya [@thaiya2021adoption] and Tanzania [@nsaghurwe2021one]. These countries have, as a matter of course, extended the framework to include “analytics services” as an additional domain. The rationale for this addition is to facilitate secondary reuse of health data for academic research, real-world evidence studies etc. which can be framed within the context of ongoing efforts towards Findable, Accessible, Interoperable and Reusable (FAIR) sharing of health data [@guillot2023fair]. In doing so, however, we have implicitly moved from conceptualizing digital health platforms (the original OpenHIE specification) to health data platforms. This is problematic because the notion of openness, which is assumed to be essential in establishing solidarity-based approaches to data sharing, is inherently different for a data platform compared to a digital platform.
 
-Conceptually, the OpenHIE framework constitutes a framework for an open digital platform. Openness for digital platforms refers to i) the use of open boundary resources, that is, specifications for the various healthcare specific workflows and information standards such as FHIR; and ii) the use of open source components that are available as digital public goods[@digitalpublicgoods]. If we are to use the OpenHIE framework as an open data platform, we need to extend the standards, technologies and architecture to include functionality for data sharing and reuse. Distinguishing four types of data sharing (@tbl-types-data-sharing), the purpose of this paper is to investigate how new standards and technologies that can establish openness of health data platforms can be integrated into the OpenHIE architecture framework. The lack of detailed specifications and consensus of this addition to OpenHIE currently stands in the way of development projects that aim to establish HDPs in LMICs. In addition, we explicitly address the requirement of downward scalability as we aim to implement health data platforms in resource constrained setting of LMICs. 
+Conceptually, the OpenHIE framework constitutes a framework for an open digital platform. Openness for digital platforms refers to i) the use of open boundary resources, that is, specifications for the various healthcare specific workflows and information standards such as FHIR; and ii) the use of open source components that are available as digital public goods[@digitalpublicgoods]. If we are to use the OpenHIE framework as an open data platform, we need to extend the standards, technologies and architecture to include functionality for data sharing and reuse. Distinguishing four types of data sharing (@tbl-types-data-sharing), the purpose of this paper is to investigate how new standards and technologies that can establish openness of HDPs can be integrated into the OpenHIE architecture framework. The lack of detailed specifications and consensus of this addition to OpenHIE currently stands in the way of development projects that aim to establish HDPs in LMICs. In addition, we explicitly address the requirement of downward scalability as we aim to implement health data platforms in resource constrained setting of LMICs. 
 
 |   | __Type of data sharing__ | __Technology enablers to create openness of health data platforms__ |
 |:-:|:-------|:-------------|
@@ -105,7 +105,12 @@ Conceptually, the OpenHIE framework constitutes a framework for an open digital 
 
 ## Methods
 
-In the paper, we present a design that extends the OpenHIE specification to include the four types of data sharing mentioned above. Using the full-STAC approach [@mehl2023fullstac] we combine open standards, open technologies and open architectures into a coherent modular HDP platform that can be configured and reused across a variety of use-cases. Subsequently, we employ a formative, naturalistic evaluation to assess the technical risk and efficacy of the design [@venable2016feds]. Given that it is prohibitively expensive to evaluate with real users and real systems in the real setting, we aim to minimize technological risks and maximize the efficacy of the design by considering three real-world examples of health data platoform in LMICs, namely i) the OpenHIM platform ([https://jembi.gitbook.io/openhim-platform/](https://jembi.gitbook.io/openhim-platform/)); ii) the ONA Canopy platform [https://ona.io/home/services/canopy/](https://ona.io/home/services/canopy/); and iii) the work conducted at PharmAccess Foundation as part of the MomCare programme ([https://health-data-commons.pharmaccess.org](https://health-data-commons.pharmaccess.org)). As part of our design research, we have taken a narrative approach in surveying existing scientific studies on health data platforms, focusing on the seminal reports and subsequently searching forward citations. In addition, we have searched the open source repositories (most notably GitHub) and the online communities (OpenHIE community, FHIR community) to search for relevant open standards, technologies and architectures. This paper should not be considered as a proper systematic review.
+In the paper, we present a design that extends the OpenHIE specification to include the four types of data sharing mentioned above. Using the full-STAC approach [@mehl2023fullstac] we combine open standards, open technologies and open architectures into a coherent modular HDP platform that can be configured and reused across a variety of use-cases. Subsequently, we employ a formative, naturalistic evaluation to assess the technical risk and efficacy of the design [@venable2016feds]. Given that it is prohibitively expensive to evaluate the design a real-world setting, we aim to minimize technological risks and maximize the efficacy of the design by considering three examples of health data platforms in LMICs, namely i) the OpenHIM platform ([https://jembi.gitbook.io/openhim-platform/](https://jembi.gitbook.io/openhim-platform/)); ii) the ONA Canopy platform [https://ona.io/home/services/canopy/](https://ona.io/home/services/canopy/); and iii) the work conducted at PharmAccess Foundation as part of the MomCare programme ([https://health-data-commons.pharmaccess.org](https://health-data-commons.pharmaccess.org)). As part of our design research, we have taken a narrative approach in surveying existing scientific studies on health data platforms, focusing on the seminal reports and subsequently searching forward citations. In addition, we have searched the open source repositories (most notably GitHub) and the online communities (OpenHIE community, FHIR community) to search for relevant open standards, technologies and architectures. This paper should not be considered as a proper systematic review.
+
+The main contributions of this paper is that:
+- It provides a framework for the components of the Data & Analysis Services that builds on current best practices from the data engineering community into the OpenHIE framework
+- Provides details on type 1 and 2 data sharing, comparing the different design options
+
 
 
 ## Design
@@ -146,32 +151,36 @@ While the lakehouse architecture separates the concerns of compute and storage, 
 
 #### SQL-on-FHIR v2 as an intermediate representation for FHIR data in tabular format
 
-The premise of separating the user interface from the execution engine is directly related to the key objective of the SQL-on-FHIR project ([https://build.fhir.org/ig/FHIR/sql-on-fhir-v2/](https://build.fhir.org/ig/FHIR/sql-on-fhir-v2/)), namely to make large-scale analysis of FHIR data accessible to a larger audience, portable between systems and to make FHIR data work well with the best available analytic tools, regardless of the technology stack. However, as FHIR is represented as a graph of resources, with detailed semantics defined for references between resources, data types, terminology, extensions, and many other aspects of the specification. To use FHIR effectively analysts require a thorough understanding of the specification. Most analytic and machine learning use cases require the preparation of FHIR data using transformations and tabular projections from its original form. The task of authoring these transformations and projections is not trivial and there is currently no standard mechanisms to support reuse.
+The premise of separating the user interface from the execution engine is directly related to the key objective of the SQL-on-FHIR project ([https://build.fhir.org/ig/FHIR/sql-on-fhir-v2/](https://build.fhir.org/ig/FHIR/sql-on-fhir-v2/)), namely to make large-scale analysis of FHIR data accessible to a larger audience, portable between systems and to make FHIR data work well with the best available analytic tools, regardless of the technology stack. However, to use FHIR effectively analysts require a thorough understanding of the specification as FHIR is represented as a graph of resources, with detailed semantics defined for references between resources, data types, terminology, extensions, and many other aspects of the specification.  Most analytic and machine learning use cases require the preparation of FHIR data using transformations and tabular projections from its original form. The task of authoring these transformations and projections is not trivial and there is currently no standard mechanisms to support reuse.
 
 The solution of the SQL-on-FHIR project is to provide a specification for defining tabular, use case-specific views of FHIR data. The view definition and the execution of the view are separated, in such a way that the definition is portable across systems while the execution engine (called runners) are system-specific tools or libraries that apply view definitions to the underlying data layer, optionally making use of annotations to optimize performance.
 
 #### Extending OpenHIE with a FHIR-based composable data stack
 
-We propose to extend the OpenHIE architecture with a "Data and Analytics Services" domain with 5 services by synthesizing the architecture of Hai et al. [@hai2023data] and the composable data stack [@pedreira2023composable] (@fig-ohie, @tbl-data-and-analysis-services).
+We propose to extend the OpenHIE architecture with a "Data and Analytics Services" domain with different service layers by synthesizing the current best practices of the a lakehouse architecture of [@hai2023data;@harby2022data;@harby2024data] and the composable data stack [@pedreira2023composable] (@fig-ohie, @tbl-data-and-analysis-services). These 5 services are considered the core of the FHIR data platform, and although it practice often a downstream dashboarding or visualization component is used, that component is not considered part of this architecture as such. NB: distinction between exploration and dashboarding is not absolute.
 
-![Proposed extension of the OpenHIE architecture that includes "Data and Analytics Services" as an additional service domain.](./images/hie.png){#fig-ohie}
+![Proposed extension of the OpenHIE architecture that includes "Data and Analytics Services" as an additional service domain.](./images/openhie-extended-architecture.png){#fig-ohie}
 
 +-------------------+---------------------------------------------------------------------------------------+
 | Service           | Functional requirements                                                               |
 +===================+=======================================================================================+
-| Ingestion         | - Metadata extraction                                                                 |
-|                   | - Metadata modeling                                                                   |
+| Ingestion         | - Bulk                                                                                |
+|                   | - Streaming                                                                           |
 +-------------------+---------------------------------------------------------------------------------------+
 | Storage           | - File-based blob storage                                                             |
-+-------------------+---------------------------------------------------------------------------------------+
-| Query &           | - SQL-on-FHIR Runner                                                                  |
-| Processing        | - Execution engine on tabular data as defined in composable data stack                |  
+|                   | - Database optimized for online analytical processing (OLAP)
 +-------------------+---------------------------------------------------------------------------------------+
 | Maintenance       | - SQL-on-FHIR View defintions                                                         |
-|                   | - Maintenance-related functions as defined by Hai et al.                              |
+|                   | - Catalog and other maintenance-related functions as defined by Hai et al.            |
 +-------------------+---------------------------------------------------------------------------------------+
-| Exploration       | - Interactive computing environment [@granger2021jupyter]                             |
-|                   | - Capability to participate as a node in a federative learning network, including MPC |
+| Processing        | - SQL-on-FHIR Runner                                                                  |
+| & API             | - Execution engine on tabular data as defined in composable data stack                |
+|                   | - Capability to participate as a node in federated learning / MPC network             |
+|                   | - Read-only access to storage                                                         |  
++-------------------+---------------------------------------------------------------------------------------+
+| Data              | - SQL interactive development environment (IDE)                                       |
+| Consumer          | - Interactive notebook computing environment [@granger2021jupyter]                    |
+|                   | - BI reporting, dashboarding and data visualization                                   |  
 +-------------------+---------------------------------------------------------------------------------------+
 
 : Definition of Data and Analysis Services {#tbl-data-and-analysis-services}
@@ -186,9 +195,14 @@ Default workflow is extraction of data from SHR using Bulk FHIR API. Data contai
 
 ##### Storage
 
-- from ndjson to parquet
-- possibly used delta lake for time versioning
-- separation of storage from compute not only for benefits of lower TCO, but also be ready for federated learning and MPC in future
+- File-based:
+  - from ndjson to parquet
+  - possibly used delta lake for time versioning
+  - separation of storage from compute not only for benefits of lower TCO, but also be ready for federated learning and MPC in future
+
+- OLAP DBMS
+  - Often columnar, like Clickhouse and BigQuery
+  - 
 
 
 ##### Query & Processing
@@ -203,8 +217,9 @@ Default workflow is extraction of data from SHR using Bulk FHIR API. Data contai
 - Maintenance-related functions remain the same
 - NB: orchestration falls under data provenance
 
-##### Exploration
+##### Data consumers
 
+Strictly speaking not part of the architecture, 
 
 
 
@@ -219,13 +234,27 @@ Many components of the OpenHIE specification are now available as a digital publ
 ![ Overview of current open source implementations of components included in the OpenHIE specification that are FHIR-compatible. The category Analytics Services is not a part of the original OpenHIE and is discussed in the paper. Point-of-Service systems are excluded for brevity. A systematic review of such digital public goods is beyond the scope of this document.](images/digital-public-goods.png){#tbl-digital-public-goods}
 
 
+
+Allows for the Data Warehouse data to be visualised via a BI tool (Apache Superset)
+
 ## Evaluation
 
 ### OpenHIM platform
 
+- One of the most used IOL layers in LMICs. Leading development of InstantHIE library to configure OpenHIE infrastructures
+
+[https://jembi.gitbook.io/openhim-platform/recipes/central-data-repository-with-data-warehousing](https://jembi.gitbook.io/openhim-platform/recipes/central-data-repository-with-data-warehousing)
+
+
+- Accept FHIR bundles submitted securely through an IOL (OpenHIM)
+- Stores Clinical FHIR data to a FHIR store (HAPI FHIR)
+- Stores Patient Demographic data to an MPI (JeMPI)
+- Pushes FHIR resources to Kafka for the reporting pipeline (and other systems) to use
+- Pulls FHIR data out of Kafka and maps it to flattened tables in the Data Warehouse (Clickhouse)
+
 - View generation in different packages, not portable
   - Logstash for bulk
-  - Kafka for streaming
+  - Kafka for streaming, uses JSON for mappings which looks similar to SQL-on-FHIR
 
 - 
 
@@ -269,16 +298,20 @@ We specifically address the notion of openness of HDPs in LMICs in terms of the 
 
 Requirements are similar, but implementation differs: Datamodel is non-FHIR, focused on DataValue, which conceptually equates to FHIR Measure
 
-### FHIR and FAIR
+### The need to a semantic layer?
 
-- How does FHIR relate to approaches taken by the FAIR community, which tend to take more an approach of using knowledge graphs. For example, VODAN Africa [@gebreslassie2023fhir4fair;@purnamajati2022data].
-- FAIR principles vs FHIR graph: is FHIR a FAIR Data Object
+- FHIR and FAIR
+  - How does FHIR relate to approaches taken by the FAIR community, which tend to take more an approach of using knowledge graphs. For example, VODAN Africa [@gebreslassie2023fhir4fair;@purnamajati2022data].
+  - FAIR principles vs FHIR graph: is FHIR a FAIR Data Object
 
+- Since we use FHIR, we don't need a semantic layer because that is already provided
+- 
 
 ### Attribute-based access control
 
 - TO DO: if you have generated flattened SQL tables, how are you going to manage security?
 - Cerbos, attribute based on lineage or anonymized tables
+- Catalogs solve this: Tabular.io, Google BigLake. What is open source option?
 
 ### Federated learning and multiparty computation
 
